--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: monospace sans-serif;
+    font-family: monospace, sans-serif;
 }
 
 .background {
@@ -74,7 +74,7 @@ button {
     background-color: sandybrown;
 }
 
-#all-clear {
+.all-clear {
     background-color: peru;
 }
 
